fix: color blobs on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -88,7 +88,7 @@ html {
 }
 
 .color-blur {
-	@apply w-48 md:w-1/2;
+	@apply w-48 md:w-1/2 hidden md:block;
 	opacity: 0.9;
 	filter: blur(500px);
 	border: 1px solid;
